--- a/angularjs_emp/app/index.html
+++ b/angularjs_emp/app/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="/css/app.css"/>
 </head>
 <body ng-cloak>
-	<div class="container">	
+	<div class="container-fluid">	
 		<div class="navbar">
 			<div class="navbar-inner">
 				<ul class='nav'>
