Added Create Employee

--- a/angularjs_emp/app/index.html
+++ b/angularjs_emp/app/index.html
@@ -12,6 +12,7 @@
 			<div class="navbar-inner">
 				<ul class='nav'>
 					<li><a href="#/employees">Employees</a></li>
+					<li><a href="#/employee/0">Add Employee</a></li>
 				</ul>
 			</div>			
 		</div>
